# kata-gilded-rose

./: README.md
cs/: README.md
cs/GildedRose/: GildedRose.cs  Item.cs  Program.cs
cs/GildedRoseTests/: GildedRoseTest.cs
csharpcore/GildedRoseTests/: GildedRoseTest.cs
java/: README.md
java/.run/: Tests.run.xml
java/src/main/java/com/gildedrose/: Application.java  GildedRose.java  Item.java
java/src/test/java/com/gildedrose/: GildedRoseTest.java
javascript/: README.md  package.json
javascript/src/: gilded_rose.js  main.js
javascript/test/: test_gilded_rose.js
python/: README.md  gilded_rose.py  pyproject.toml  test_gilded_rose.py
python/tests/: test_gilded_rose.py
